// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformRequestFunctionName 1`] = `
"import { request } from \\"mobx-value\\";
import {
  putPet,
  postPet,
  getPetFindByStatus,
  getPetFindByTags,
  getPetPetId,
  postPetPetId,
  deletePetPetId,
  postPetPetIdUploadImage,
  getStoreInventory,
  postStoreOrder,
  getStoreOrderOrderId,
  deleteStoreOrderOrderId,
  postUser,
  postUserCreateWithList,
  getUserLogin,
  getUserLogout,
  getUserUsername,
  putUserUsername,
  deleteUserUsername,
  Pet,
  ApiResponse,
  Order,
  User,
} from \\"src/service/petv3\\";

export const mobxPutPet = request({
  request: putPet,
  value: {} as Pet,
});
export const mobxPostPet = request({
  request: postPet,
  value: {} as Pet,
});
export const mobxGetPetFindByStatus = request({
  request: getPetFindByStatus,
  value: {} as Pet[],
});
export const mobxGetPetFindByTags = request({
  request: getPetFindByTags,
  value: {} as Pet[],
});
export const mobxGetPetPetId = request({
  request: getPetPetId,
  value: {} as Pet,
});
export const mobxPostPetPetId = request({
  request: postPetPetId,
  value: {} as any,
});
export const mobxDeletePetPetId = request({
  request: deletePetPetId,
  value: {} as any,
});
export const mobxPostPetPetIdUploadImage = request({
  request: postPetPetIdUploadImage,
  value: {} as ApiResponse,
});
export const mobxGetStoreInventory = request({
  request: getStoreInventory,
  value: {} as { [propertyName: string]: number },
});
export const mobxPostStoreOrder = request({
  request: postStoreOrder,
  value: {} as Order,
});
export const mobxGetStoreOrderOrderId = request({
  request: getStoreOrderOrderId,
  value: {} as Order,
});
export const mobxDeleteStoreOrderOrderId = request({
  request: deleteStoreOrderOrderId,
  value: {} as any,
});
export const mobxPostUser = request({
  request: postUser,
  value: {} as User,
});
export const mobxPostUserCreateWithList = request({
  request: postUserCreateWithList,
  value: {} as User,
});
export const mobxGetUserLogin = request({
  request: getUserLogin,
  value: \\"\\" as string,
});
export const mobxGetUserLogout = request({
  request: getUserLogout,
  value: {} as any,
});
export const mobxGetUserUsername = request({
  request: getUserUsername,
  value: {} as User,
});
export const mobxPutUserUsername = request({
  request: putUserUsername,
  value: {} as any,
});
export const mobxDeleteUserUsername = request({
  request: deleteUserUsername,
  value: {} as any,
});
"
`;

exports[`use beforeWriteTs hook 1`] = `
"import { request } from \\"mobx-value\\";
import {
  putPet,
  postPet,
  getPetFindByStatus,
  getPetFindByTags,
  getPetPetId,
  postPetPetId,
  deletePetPetId,
  postPetPetIdUploadImage,
  getStoreInventory,
  postStoreOrder,
  getStoreOrderOrderId,
  deleteStoreOrderOrderId,
  postUser,
  postUserCreateWithList,
  getUserLogin,
  getUserLogout,
  getUserUsername,
  putUserUsername,
  deleteUserUsername,
  Pet,
  ApiResponse,
  Order,
  User,
} from \\"src/service/petv3\\";

export const requestPutPet = request({
  request: putPet,
  value: {} as Pet,
});
export const requestPostPet = request({
  request: postPet,
  value: {} as Pet,
});
export const requestGetPetFindByStatus = request({
  request: getPetFindByStatus,
  value: {} as Pet[],
});
export const requestGetPetFindByTags = request({
  request: getPetFindByTags,
  value: {} as Pet[],
});
export const requestGetPetPetId = request({
  request: getPetPetId,
  value: {} as Pet,
});
export const requestPostPetPetId = request({
  request: postPetPetId,
  value: {} as any,
});
export const requestDeletePetPetId = request({
  request: deletePetPetId,
  value: {} as any,
});
export const requestPostPetPetIdUploadImage = request({
  request: postPetPetIdUploadImage,
  value: {} as ApiResponse,
});
export const requestGetStoreInventory = request({
  request: getStoreInventory,
  value: {} as { [propertyName: string]: number },
});
export const requestPostStoreOrder = request({
  request: postStoreOrder,
  value: {} as Order,
});
export const requestGetStoreOrderOrderId = request({
  request: getStoreOrderOrderId,
  value: {} as Order,
});
export const requestDeleteStoreOrderOrderId = request({
  request: deleteStoreOrderOrderId,
  value: {} as any,
});
export const requestPostUser = request({
  request: postUser,
  value: {} as User,
});
export const requestPostUserCreateWithList = request({
  request: postUserCreateWithList,
  value: {} as User,
});
export const requestGetUserLogin = request({
  request: getUserLogin,
  value: \\"\\" as string,
});
export const requestGetUserLogout = request({
  request: getUserLogout,
  value: {} as any,
});
export const requestGetUserUsername = request({
  request: getUserUsername,
  value: {} as User,
});
export const requestPutUserUsername = request({
  request: putUserUsername,
  value: {} as any,
});
export const requestDeleteUserUsername = request({
  request: deleteUserUsername,
  value: {} as any,
});
"
`;
